# revm-tracer

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
ios/: revm_tracer.podspec
lib/: base.dart  revm_tracer.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: tracer.dart
linux/: CMakeLists.txt
macos/: revm_tracer.podspec
rust/: Cargo.toml
rust/examples/: interactive_trace.rs  rpc_trace.rs  simple_trace.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: tracer.rs
rust/src/trace/: block.rs  database.rs  error.rs  inspector.rs  mod.rs  trace.rs
windows/: CMakeLists.txt
